M3.2 — Edge create/delete, palette drag-to-canvas, Save/Save As
studio/save/PflowWriter.java (NEW, ~95 LOC):
- Serialises a live Graph back to .pflow JSON.
- Preserves the source PflowJson's schema/name/output metadata across
  save round-trips.
- Emits per-node param overrides ONLY when the current value differs
  from the parameter's defaultValue (deep-equals for float[]).
- Edges round-trip via NodeId.value (the JSON-friendly string id).

studio/graph/Graph.java:
- All public mutating + reading methods are now synchronized so the EDT
  can safely mutate while the GL thread reads.
- New: removeNode(NodeId) — drops the node and any incident edges.
- New: disconnect(Edge) — removes a single edge.
- connect() now replaces any existing edge into the same input port
  (input ports are 1:1).

studio/ui/StudioModel.java:
- New save() and saveAs(Path) routes via PflowWriter.
- saveAs adopts the new path so subsequent Save Ctrl+S targets it.

studio/ui/MainFrame.java:
- File menu now has Save (Ctrl+S) and Save As… (Ctrl+Shift+S).
- Save As preserves the current path's selection in the dialog.

studio/ui/NodeEditorPanel.java:
- Edge creation: left-drag from an output port; on release, if the
  cursor is over an input port, calls graph.connect (which type-checks
  and cycle-checks). In-progress wire renders as a dashed orange Bezier.
- Edge deletion: right-click on (or near) a wire; uses Bezier hit-test
  by sampling 17 points along each cubic and picking the closest <10 px.
- Node deletion: select a node, press Delete.
- New: takes a NodeFactoryRegistry so drop-targets can instantiate nodes.
- DropTarget added: ToolPalette drags an entry to the canvas; on drop,
  a new node is created at the cursor world position, added to the
  graph, registered in current.nodesById, and selected.

studio/ui/ToolPalette.java:
- JList now drag-enabled with COPY action; transfer payload is the
  typeId string (also exposed via TYPE_ID_FLAVOR for future structured
  data drops).
- Footer labe